# DLC-Hackathon-2026

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: example_eval.yaml  example_eval_detector.yaml  example_eval_pose.yaml  example_train.yaml  example_train_detector.yaml  example_train_pose.yaml
docs/: external_detectors_api.md
scripts/: demo_notebook.ipynb
src/dlc_hackathon/: __init__.py  evaluation.py  metrics.py  paths.py  training.py  utils.py  visualization.py
src/dlc_hackathon/schemas/: benchmarking.py  dlc_overrides.py  types.py
