[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dlc-hackaton-2026"
version = "0.1.0"
description = "Organization repository for the DeepLabCut Lemanic Life Sciences Hackathon 2026"
readme = "README.md"
requires-python = ">3.10, <3.13"
dependencies = [
    "deeplabcut>=3.0.0rc14",
    "ipykernel>=7.2.0",
    "pydantic>=2.0.0",
    "wandb>=0.25.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
include = ["src"]
extraPaths = ["src"]

[tool.basedpyright]
include = ["src"]
extraPaths = ["src"]
