[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=61" ]

[project]
name = "dlc-hackaton-2026"
version = "0.1.0"
description = "Organization repository for the DeepLabCut Lemanic Life Sciences Hackathon 2026"
readme = "README.md"
requires-python = ">3.10,<3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "ipykernel>=7.2",
  "pydantic>=2",
  "wandb>=0.25.1",
]

[project.optional-dependencies]
dlc-mod = [
  "deeplabcut @ git+https://github.com/C-Achard/DeepLabCut.git@cy/h-detectors",
]

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true
[tool.ruff.lint]
select = [ "E", "F", "B", "I", "UP" ]
ignore = [ "E741", "B007" ]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyproject-fmt]
max_supported_python = "3.12"
generate_python_version_classifiers = true
# Avoid collapsing tables to field.key = value format (less readable)
table_format = "long"

[tool.pyright]
include = [ "src" ]
extraPaths = [ "src" ]

[tool.basedpyright]
include = [ "src" ]
extraPaths = [ "src" ]
